Float panel's collapse button to left

--- a/src/resources/css/extjs_rtl.css
+++ b/src/resources/css/extjs_rtl.css
@@ -14,3 +14,6 @@
 .x-menu { background-image:url(../images/default/menu/menu.gif); background-position: top right; background-repeat:repeat-y; }
 .x-menu-item-arrow{ background-image:url(../images/default/menu/menu-parent.gif); }
 a.x-menu-item { padding:3px 27px 3px 21px; }
+
+/*Panel's x-tool*/
+.x-tool {float:left;}
