--- a/examples/layout/accordion.html
+++ b/examples/layout/accordion.html
@@ -34,32 +34,32 @@
         Ext.onReady(function() {
 
             var item1 = new Ext.Panel({
-                title: 'Accordion Item 1',
-                html: '&lt;empty panel&gt;',
+                title: 'פריט אקורדיון 1',
+                html: '&lt;פנל ריק&gt;',
                 cls:'empty'
             });
 
             var item2 = new Ext.Panel({
-                title: 'Accordion Item 2',
-                html: '&lt;empty panel&gt;',
+                title: 'פריט אקורדיון 2',
+                html: '&lt;פנל ריק&gt;',
                 cls:'empty'
             });
 
             var item3 = new Ext.Panel({
-                title: 'Accordion Item 3',
-                html: '&lt;empty panel&gt;',
+                title: 'פריט אקורדיון 3',
+                html: '&lt;פנל ריק&gt;',
                 cls:'empty'
             });
 
             var item4 = new Ext.Panel({
-                title: 'Accordion Item 4',
-                html: '&lt;empty panel&gt;',
+                title: 'פריט אקורדיון 4',
+                html: '&lt;פנל ריק&gt;',
                 cls:'empty'
             });
 
             var item5 = new Ext.Panel({
-                title: 'Accordion Item 5',
-                html: '&lt;empty panel&gt;',
+                title: 'פריט אקורדיון 5',
+                html: '&lt;פנל ריק&gt;',
                 cls:'empty'
             });
 
