--- a/examples/layout/anchor.html
+++ b/examples/layout/anchor.html
@@ -1,14 +1,17 @@
 <html>
 <head>
     <title>Anchor Layout</title>
-    <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css"/>
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
     <!-- GC -->
     <!-- LIBS -->
-    <script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
     <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="תוכן-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
 
     <style type="text/css">
         html, body {
@@ -26,18 +29,18 @@
                 layout:'anchor',
                 anchorSize: {width:800, height:600},
                 items:[{
-                    title:'Item 1',
-                    html:'Content 1',
+                    title:'פריט 1',
+                    html:'תוכן 1',
                     width:800,
                     anchor:'right 20%'
                 },{
-                    title:'Item 2',
-                    html:'Content 2',
+                    title:'פריט 2',
+                    html:'תוכן 2',
                     width:300,
                     anchor:'50% 30%'
                 },{
-                    title:'Item 3',
-                    html:'Content 3',
+                    title:'פריט 3',
+                    html:'תוכן 3',
                     width:600,
                     anchor:'-100 50%'
                 }]
@@ -45,7 +48,7 @@
         });
     </script>
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 </body>
 </html>
