Change table layout, seems to work OOTB

--- a/examples/layout/table.html
+++ b/examples/layout/table.html
@@ -1,14 +1,17 @@
 <html>
 <head>
     <title>Table Layout</title>
-    <link rel="stylesheet" type="text/css" href="../../resources/css/ext-all.css"/>
+    <link rel="stylesheet" type="text/css" href="http://extjs.com/deploy/ext-3.0-rc1.1/resources/css/ext-all.css"/>
 
     <!-- GC -->
     <!-- LIBS -->
-    <script type="text/javascript" src="../../adapter/ext/ext-base.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/adapter/ext/ext-base.js"></script>
     <!-- ENDLIBS -->
 
-    <script type="text/javascript" src="../../ext-all.js"></script>
+    <script type="text/javascript" src="http://extjs.com/deploy/ext-3.0-rc1.1/ext-all.js"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <script type="text/javascript" src="../../src/extjs_rtl.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../src/resources/css/extjs_rtl.css"/>
 
     <style type="text/css">
         html, body {
@@ -29,31 +32,31 @@
                 // applied to child components
                 defaults: {frame:true, width:200, height: 200},
                 items:[{
-                    title:'Item 1'
+                    title:'פריט 1'
                 },{
-                    title:'Item 2'
+                    title:'פריט 2'
                 },{
-                    title:'Item 3'
+                    title:'פריט 3'
                 },{
-                    title:'Item 4',
+                    title:'פריט 4',
                     width:410,
                     colspan:2
                 },{
-                    title:'Item 5'
+                    title:'פריט 5'
                 },{
-                    title:'Item 6'
+                    title:'פריט 6'
                 },{
-                    title:'Item 7',
+                    title:'פריט 7',
                     width:410,
                     colspan:2
                 },{
-                    title:'Item 8'
+                    title:'פריט 8'
                 }]
             });
         });
     </script>
 </head>
-<body>
+<body dir="rtl">
 <script type="text/javascript" src="../shared/examples.js"></script><!-- EXAMPLES -->
 </body>
 </html>
