--- a/examples/tabs/tab-scroller-menu.css
+++ b/examples/tabs/tab-scroller-menu.css
@@ -2,7 +2,7 @@
  * Ext JS Library 3.0 Pre-alpha
  * Copyright(c) 2006-2008, Ext JS, LLC.
  * licensing@extjs.com
- * 
+ *
  * http://extjs.com/license
  */
 
@@ -15,7 +15,7 @@
     border-bottom: 1px solid #8db2e3;
     width:18px;
     position:absolute;
-    right:0;
+    right:auto; left:0;
     top:0;
     z-index:10;
     cursor:pointer;
