--- a/src/resources/css/extjs_rtl.css
+++ b/src/resources/css/extjs_rtl.css
@@ -38,11 +38,14 @@ ul.x-tab-strip li.x-tab-edge { float:right;}
 
 /*Grids*/
 .x-props-grid .x-grid3-td-name .x-grid3-cell-inner {
-    background-image:url(../images/default/grid/grid3-special-col-bg.gif) !important;
+    background-image:url(../images/default/grid/grid3-special-col-bg-1-rtl.gif) !important;
     padding-left: 0; padding-right: 12px; background-position: 100% 0% !important;
 }
 .x-grid3-hd-btn { left:0; right:auto; background-image:url(../images/default/grid/grid3-hd-btn-rtl.gif); }
 .x-grid3-hd-row td { border-right-color:#EEEEEE; border-left-color:#D0D0D0; }
+.x-grid3-body .x-grid3-td-numberer, .x-grid3-body .x-grid3-td-expander, .x-grid3-body .x-grid3-td-checker {
+    background-image:url(../images/default/grid/grid3-special-col-bg-rtl.gif);
+}
 
 /*Forms*/
 .x-form-item label { float:right; }
