--- a/src/resources/css/extjs_rtl.css
+++ b/src/resources/css/extjs_rtl.css
@@ -91,8 +91,9 @@ x-btn-mc em.x-btn-arrow { padding-left: 12px }
 .x-btn-mc em.x-btn-arrow { background-position:left center; padding-right:0; padding-left:10px; }
 .x-toolbar-more em.x-btn-arrow { padding-left:0}
 
-/*MessageBox*/
+/*MessageBox and Window*/
 .x-window-dlg .ext-mb-icon {float:right;}
 .x-window-dlg .ext-mb-info, .x-window-dlg .ext-mb-warning, .x-window-dlg .ext-mb-question, .x-window-dlg .ext-mb-error {
     background-position: right top;
 }
+.x-hidden, .x-hide-offsets { left:0px; }
