Fix comobobox in a toolbar

--- a/src/resources/css/extjs_rtl.css
+++ b/src/resources/css/extjs_rtl.css
@@ -94,6 +94,7 @@ x-btn-mc em.x-btn-arrow { padding-left: 12px }
 .x-toolbar-more-icon { background-image:url(../images/default/toolbar/more-rtl.gif) !important; }
 .x-btn-mc em.x-btn-arrow { background-position:left center; padding-right:0; padding-left:10px; }
 .x-toolbar-more em.x-btn-arrow { padding-left:0}
+.x-toolbar-right td .x-form-field-trigger-wrap { text-align:right }
 
 /*MessageBox and Window*/
 .x-window-dlg .ext-mb-icon {float:right;}
